--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/seajensen/graph_ql#readme",
   "dependencies": {
+    "@graphql-tools/schema": "^7.1.3",
+    "@prisma/client": "^2.21.2",
     "apollo-server": "^2.23.0",
-    "graphql": "^15.5.0"
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.5.0",
+    "graphql-playground-middleware-express": "^1.7.22"
   }
 }
