added seed functionality

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgres://admin:squirtlesquad@postgres:5464/postgres?schema=public"
+DATABASE_URL="postgres://admin:squirtlesquad@localhost:5432/docker_db_1?schema=public"
