--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
     "graphql-playground-middleware-express": "^1.7.22",
+    "nodemon": "^2.0.7",
     "type-graphql": "^1.1.1"
   }
 }
